| Bug #26176 | NdbObjectIdMap::expand unable to expand!! mysqld got signal 11 | ||
|---|---|---|---|
| Submitted: | 8 Feb 2007 4:33 | Modified: | 17 Apr 2007 11:48 |
| Reporter: | Sean Pringle | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.0, 5.1 | OS: | Any |
| Assigned to: | Tomas Ulin | Target Version: | |
[8 Feb 2007 4:33]
Sean Pringle
[9 Feb 2007 20:57]
Hartmut Holzgraefe
expand() only printing an error message would be ok (as realloc leaves the original memory chunk intact if reallocation fails), but IMHO it should return true or false instead of void and just printing a warning, so that callers have a chance to deal with expansion failures ...
[14 Feb 2007 9:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/19846
[11 Apr 2007 14:19]
Tomas Ulin
patch
Attachment: tmp.patch (text/x-patch), 63.38 KiB.
[11 Apr 2007 14:20]
Tomas Ulin
break out of some inline fuctions
Attachment: ObjectMap.cpp (text/x-c++src), 1.64 KiB.
[11 Apr 2007 15:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/24277 ChangeSet@1.2442, 2007-04-11 15:21:11+02:00, tomas@whalegate.ndb.mysql.com +29 -0 Bug#26176 NdbObjectIdMap::expand unable to expand!! mysqld got signal 11 - try to catch as many malloc failures as possible and give error messages
[11 Apr 2007 17:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/24293 ChangeSet@1.2574, 2007-04-11 18:10:45+02:00, tomas@whalegate.ndb.mysql.com +6 -0 Bug#26176 NdbObjectIdMap::expand unable to expand!! mysqld got signal 11 - try to catch as many malloc failures as possible and give error messages (more for 5.1)
[15 Apr 2007 18:49]
Bugs System
Pushed into 5.1.18-beta
[15 Apr 2007 18:53]
Bugs System
Pushed into 5.0.40
[17 Apr 2007 11:48]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.0.40 and 5.1.18 changelogs.
