    backport some mysql-test ndbcluster things from 5.1     remove compiler warning EventLogger.cpp     Bug#26176 NdbObjectIdMap::expand unable to expand!! mysqld got signal 11      - partial fix      - object map to handle failed realloc